[project]
name = "eduation-media-api"
version = "0.1.0"
description = "RE:Boot FastAPI backend with Agentic RAG"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "openai>=1.54.0",
    "httpx>=0.27.0",
    "numpy>=2.1.0",
    "scikit-learn>=1.5.0",
    "rank-bm25>=0.2.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"
